--- a/template.html
+++ b/template.html
@@ -128,14 +128,17 @@ let template= {
 "HTML-1" : `<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="theme-color" content="black">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-navbutton-color" content="black">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8"/>
+<meta name="author" content="Kawiesh"/>
+<meta name="keywords" content="Kawiesh, Debisarun, Kawiesh Debisarun"/>
+<meta name="description" content="Kawiesh Debisarun"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+<meta name="theme-color" content="black"/>
+<meta name="msapplication-TileColor" content="#da532c"/>
+<meta name="msapplication-navbutton-color" content="black"/>
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 <title>❤️</title>
 
 <style>				
@@ -168,19 +171,15 @@ align-items: center;
 }
 
 
-body{
-padding: 10px 0;
+.body{
 justify-content: flex-start;
 background: rgb(251,244,234) url("https://www.toptal.com/designers/subtlepatterns/uploads/brickwall.png");
 }
 
 .container{
 height: 100%;
-padding: 10px 0;
-position: relative;
 justify-content: flex-start;
-border: 2px inset black;
-border-radius: 5px;
+border: 1px solid darkgray;
 }
 /******************************************************/
 
