--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <meta name="msapplication-navbutton-color" content="black"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-<meta name="description" content="Some useful JavaScript codes intented to be used as bookmarklets!"/>
+<meta name="description" content="Small but useful JavaScript codes intented to be used as bookmarklets!"/>
 <meta name="keywords" content="Javascript, html, css, kawiesh, bookmarklet, fetch api"/>
 <meta name="author" content="Kawiesh"/>
 <meta property="og:title" content="Remote bookmarklets by Kawiesh"/>
 <meta property="og:type" content="Some useful JavaScript codes intented to be used as bookmarklets!"/>
 <meta property="og:url" content=""/>
 <meta property="og:image" content="https://kawiesh.tk/resources/kawiesh.jpg"/>
-<title>Remote bookmarklets by Kawiesh</title>
+<title>Bookmarklets - Kawiesh</title>
 
 <style>				
 *{
@@ -120,9 +120,11 @@ color: brown;
 
 </style>
 </head>
-<body data-nosnippet= "true">
-<div id="container">
-<div class="message">If you're lucky you'll see the bookmarklets soon!</div>
+<body data-nosnippet>
+<div id="container" data-nosnippet>
+<div class="message" data-nosnippet>
+If you're lucky you'll see the bookmarklets soon!
+</div>
 <br>
 <table id="links">
 <thead>
