--- a/template.html
+++ b/template.html
@@ -195,7 +195,7 @@ border: 1px solid darkgray;
 }
 </style>
 </head>
-<body class="flexcolumn">
+<body class="body flexcolumn">
 <div class="container flexcolumn">
 
 ❤️
