--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="msapplication-navbutton-color" content="black"/>
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-<meta name="description" content="Small but useful JavaScript codes intented to be used as bookmarklets!"/>
+<meta name="description" content="Small but useful JavaScript codes intended to be used as bookmarklets!"/>
 <meta name="keywords" content="Javascript, html, css, kawiesh, bookmarklet, fetch api"/>
 <meta name="author" content="Kawiesh"/>
 <meta property="og:title" content="Remote bookmarklets by Kawiesh"/>
