--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="Javascript, html, css, kawiesh, bookmarklet, fetch api"/>
 <meta name="author" content="Kawiesh"/>
 <meta property="og:title" content="Remote bookmarklets by Kawiesh"/>
-<meta property="og:type" content="Some useful JavaScript codes intented to be used as bookmarklets!"/>
+<meta property="og:type" content="Some useful JavaScript codes intended to be used as bookmarklets!"/>
 <meta property="og:url" content=""/>
 <meta property="og:image" content="https://kawiesh.tk/resources/kawiesh.jpg"/>
 <title>Bookmarklets - Kawiesh</title>
