--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ selectAll= (x,y=document)=> y.querySelectorAll(x);
 
 let url0= "https://api.github.com/repos/nostalgickd/cdn/contents/?v=" + Date.now();
 let table= select("table#links");
-let url= "https://cors.krishan.workers.dev/?https://github.com/nostalgickd/cdn?v=" + Date.now();
+let url= "https://corsproxy.io/?https://github.com/nostalgickd/cdn?v=" + Date.now();
 
 
 
