--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@ fetch(url)
 .then(r=>r.text())
 .then(d=>{
 let doc= new DOMParser().parseFromString(d,"text/html");
-let linx= selectAll(".Layout-main a[title][href$=\\.js]",doc);
+let selector1= ".Layout-main a[title][href$=\\.js]";  
+let selector2= ".react-directory-row a[href$=\.js]";  
+let linx= selectAll(selector2,doc);
 [...linx].forEach(i=>{
 let url= domain+i.title, text= i.title;
 let a= `<a class="link" href="${url}">${text}</a>`;
