--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         // This `domain` variable was empty in your original code.
         // It MUST be correctly set for the bookmarklets to work.
         // I've set it to the correct CDN base URL.
-        let domain = "https://cdn.kawiesh.top"; 
+        let domain = "https://cdn.kawiesh.top/"; 
 
         // Your existing `createCells` function, now used by the new fetch logic
         function createCells(x) {
